# Sling

./: .gitignore  CHANGELOG.md  README.md  demo.py  demo_output.json  demo_positions.json  docker-compose.yml  pyproject.toml  requirements-lock.txt  requirements.txt  run_worker.py  validate_broadcast.py
api/: __init__.py  index.py  requirements.txt  server.py  ui_html.py
config/: settings.py
core/: __init__.py  calibration.py  counter.py  detection.py  formation.py  pipeline.py  tracking.py
docker/: Dockerfile.api
frontend/: Dockerfile  package.json
scripts/: diagnose_detection.py  local_smoke_test.ps1  start_local.ps1
tests/: test_failure_modes.py
worker/: Dockerfile  app.py  fly.toml  processor.py  redis_store.py  requirements.txt
